--- a/Bidding_System/src/main/resources/application-local.properties
+++ b/Bidding_System/src/main/resources/application-local.properties
@@ -23,3 +23,5 @@ exchange.name=sendgrid-exchange
 email.routing-key=send-email
 
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.hibernate.ddl-auto=update
+
