--- a/Product_Service/src/main/resources/application-local.properties
+++ b/Product_Service/src/main/resources/application-local.properties
@@ -13,4 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework.security=DEBUG
 
 user-service.url=http://localhost:8080
+spring.jpa.hibernate.ddl-auto=update
 
