--- a/User_Service/src/main/resources/application-local.properties
+++ b/User_Service/src/main/resources/application-local.properties
@@ -10,3 +10,5 @@ spring.datasource.password= root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.springframework.security=DEBUG
